[package]
name = "RemoteWindow"
version = "0.1.0"
authors = ["Ahmetcan AKSU <ahmetcanco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#scrap = "0.5"
#rgb = "0.8"
#png = "0.16.8"
#repng = "0.2.2"
#captrs = "0.3.1"
fontdue = "0.7.3"
rand = "0.8.5"
minifb = "0.25.0"
captrs="0.3.1"
zstd = "0.12"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"